feat(backend): introduce HYBRID mode for GPU prefill and CPU decode to optimize performance on Intel iGPU hosts